objects/Matrix_Lead__c.object
<CustomObject>
    <customHelpPage>Help_for_Matrix_Lead</customHelpPage>
    <description>This Object will store all  the leads received from matrix, on quarterly basis.</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <description>Date the lead was assigned to the banker</description>
        <label>Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Request_Date__c</fullName>
        <label>Assignment Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <label>Auditor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEE__c</fullName>
        <label>BEE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Branch__c</fullName>
        <label>Bank Branch</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cars__c</fullName>
        <label>Cars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Name of the company</description>
        <label>Company Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted_Date__c</fullName>
        <description>Date on which the Lead was contacted</description>
        <label>Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Deadline__c</fullName>
        <label>Conversion Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <label>Database</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_for_Conversion__c</fullName>
        <formula>IF(ISPICKVAL( Lead_Status__c , &quot;Converted&quot;) ,  DATEVALUE( LastModifiedDate) -  Assignment_Date__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#Days for Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Leads extension</description>
        <label>Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Code__c</fullName>
        <label>Fax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_No__c</fullName>
        <label>Fax No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <label>Fleet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMPEXBOTH__c</fullName>
        <label>IMPEXBOTH</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Approval__c</fullName>
        <formula>IF(ISPICKVAL(Lead_Status__c, &apos;Pending Assignment&apos;) &amp;&amp; NOT(ISNULL(Assignment_Request_Date__c)) || ISPICKVAL(Lead_Status__c, &apos;Contacted&apos;) &amp;&amp;  Requested_Extension_30_days__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <label>Initial</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSE__c</fullName>
        <label>JSE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KI_Ref__c</fullName>
        <description>Leads KI Ref no</description>
        <label>Ki_ref</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDVS__c</fullName>
        <label>LDVS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <label>LOB1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <description>Organisation&apos;s postal code</description>
        <label>Post Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address1__c</fullName>
        <description>Lead&apos;s postal address</description>
        <label>Postal Address1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address_2__c</fullName>
        <label>Postal Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Area__c</fullName>
        <description>Leads postal area</description>
        <label>Postal Area</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF_NO_F__c</fullName>
        <formula>IF(CONTAINS(REF_NO__c, &quot; &quot;), LEFT(REF_NO__c, FIND(&quot; &quot;, REF_NO__c)-1), REF_NO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REF NO F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF_NO__c</fullName>
        <label>REF NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REG_No__c</fullName>
        <description>Registration number of the lead</description>
        <label>REG No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_unqualified_leads__c</fullName>
        <description>Reasons to provide why the lead was unqualified</description>
        <label>Reason for unqualified leads</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Could not get decision</fullName>
                </value>
                <value>
                    <fullName>Inaccurate data</fullName>
                </value>
                <value>
                    <fullName>Inconvenient timing</fullName>
                </value>
                <value>
                    <fullName>No Longer with the Company</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Other(please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Extension_30_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Extension (30 days)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCODE_Description__c</fullName>
        <label>SICCODE Description</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCODE__c</fullName>
        <label>SICCODE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Head_Email__c</fullName>
        <label>Sector Head Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sector_Head__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot;  &amp;   Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector Head</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify_Other__c</fullName>
        <description>Specify the reason why the lead was unqualified</description>
        <label>Specify Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_3__c</fullName>
        <label>Street Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Code__c</fullName>
        <label>Street Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tel_Code__c</fullName>
        <label>Tel Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tel_No__c</fullName>
        <label>Tel No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Trade_Division__c</fullName>
        <description>Name of the trade division</description>
        <label>Trade Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trucks__c</fullName>
        <label>Trucks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turn_Over__c</fullName>
        <label>Turn Over</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web Address</label>
        <type>Url</type>
    </fields>
    <label>Matrix Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Turn_Over__c</columns>
        <columns>Province__c</columns>
        <columns>First_Name__c</columns>
        <columns>Surname__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>CIB_Coverage_Sector_Heads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_Leads</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Turn_Over__c</columns>
        <columns>Province__c</columns>
        <columns>First_Name__c</columns>
        <columns>Surname__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Assigned Leads</label>
        <sharedTo>
            <group>CIB_Coverage_Sector_Heads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Converted_Leads</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Turn_Over__c</columns>
        <columns>Province__c</columns>
        <columns>First_Name__c</columns>
        <columns>Surname__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>Converted</value>
        </filters>
        <label>Converted Leads</label>
        <sharedTo>
            <group>CIB_Coverage_Sector_Heads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Turn_Over__c</columns>
        <columns>First_Name__c</columns>
        <columns>Surname__c</columns>
        <columns>Province__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>Contacted,Converted,Open,Pending Assignment,Assigned</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Leads_Matrix_Lead</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Turn_Over__c</columns>
        <columns>Province__c</columns>
        <columns>First_Name__c</columns>
        <columns>Surname__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Unassigned Leads</label>
        <queue>Unassigned_Leads</queue>
        <sharedTo>
            <group>CIB_Coverage_Sector_Heads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_Matrix_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Unassigned</label>
        <queue>Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ML-{0000}</displayFormat>
        <label>Matrix Lead</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrix Leads</pluralLabel>
    <recordTypes>
        <fullName>Converted_Leads</fullName>
        <active>true</active>
        <description>Record type for leads that have been converted.It is read only for all records</description>
        <label>Converted Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unconverted_Leads</fullName>
        <active>true</active>
        <description>Record type for leads that have not yet been converted.</description>
        <label>Unconverted Leads</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contacted_or_Unqualified_Leads</fullName>
        <active>true</active>
        <description>If leads status has been changed to &quot;Contacted&quot; or &quot;Unqalified,a reason must be provided</description>
        <errorConditionFormula>ISPICKVAL( Lead_Status__c , &quot;Contacted&quot;)&amp;&amp;  ISBLANK(Comments__c)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please provide a comment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Converted_Leads</fullName>
        <active>true</active>
        <description>Display error message</description>
        <errorConditionFormula>ISPICKVAL(Lead_Status__c,&quot;Converted&quot;)&amp;&amp; NOT(ISCHANGED(Lead_Status__c))</errorConditionFormula>
        <errorDisplayField>Lead_Status__c</errorDisplayField>
        <errorMessage>Converted Leads cannot be updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Assignment_Leads_are_read_only</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Lead_Status__c), &apos;Pending Assignment&apos;) &amp;&amp;  NOT(ISPICKVAL(Lead_Status__c, &apos;Assigned&apos;) || ISPICKVAL(Lead_Status__c, &apos;Open&apos;))</errorConditionFormula>
        <errorMessage>Leads in status &quot;Pending Assignment&quot; cannot be updated until they are approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_unqualified_leads</fullName>
        <active>true</active>
        <description>Reason must be provided why the lead was unqualified</description>
        <errorConditionFormula>ISPICKVAL( Lead_Status__c ,&quot;Unqualified&quot;)&amp;&amp; ISBLANK(TEXT(Reason_for_unqualified_leads__c))</errorConditionFormula>
        <errorDisplayField>Reason_for_unqualified_leads__c</errorDisplayField>
        <errorMessage>Please select a reason for unqualified lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_Other</fullName>
        <active>true</active>
        <description>Specify why the lead is unqualified</description>
        <errorConditionFormula>ISPICKVAL(Lead_Status__c, &apos;Unqualified&apos;) &amp;&amp;  
ISPICKVAL(Reason_for_unqualified_leads__c ,&apos;Other(please specify)&apos;) 
&amp;&amp; ISBLANK(Specify_Other__c)</errorConditionFormula>
        <errorDisplayField>Specify_Other__c</errorDisplayField>
        <errorMessage>Please specify other reason for lead to be unqualified</errorMessage>
    </validationRules>
</CustomObject>